--- a/pom.xml
+++ b/pom.xml
@@ -2,6 +2,7 @@
 	<modelVersion>4.0.0</modelVersion>
 	<groupId>net.praqma</groupId>
 	<artifactId>drmemory-api</artifactId>
+	<packaging>jar</packaging>
 	<version>0.1.0-SNAPSHOT</version>
 	<name>Dr. Memory Api</name>
 	<url>http://maven.apache.org</url>
@@ -40,8 +41,17 @@
 					<nohelp>true</nohelp>
 				</configuration>
 			</plugin>
-    			
+				
 		</plugins>
+		
+        <extensions>
+            <!-- Enabling the use of FTP -->
+            <extension>
+                <groupId>org.apache.maven.wagon</groupId>
+                <artifactId>wagon-ssh-external</artifactId>
+                <version>1.0</version>
+            </extension>
+        </extensions>
 
 	</build>
 	
