--- a/pom.xml
+++ b/pom.xml
@@ -3,7 +3,7 @@
 	<groupId>net.praqma</groupId>
 	<artifactId>drmemory-api</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.3-SNAPSHOT</version>
+	<version>0.1.3</version>
 	<name>Dr. Memory Api</name>
 	<url>http://maven.apache.org</url>
 	
