--- a/pom.xml
+++ b/pom.xml
@@ -3,129 +3,118 @@
 	<groupId>net.praqma</groupId>
 	<artifactId>drmemory-api</artifactId>
 	<packaging>jar</packaging>
-	<version>0.1.5-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<name>Dr. Memory Api</name>
 	<url>http://maven.apache.org</url>
+	<description>Dr. Memory api for java</description>
 	
     <developers>
         <developer>
-            <id>praqma_josra</id>
-            <name>Praqma Josra</name>
+            <id>MadsNielsen</id>
+            <name>Mads Nielsen</name>
+			<email>man@praqma.net</email>
         </developer>
     </developers>
+
+	<licenses>
+		<license>
+			<name>MIT License</name>
+			<url>http://opensource.org/licenses/MIT</url>
+		</license>
+	</licenses>
+
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
 
-	<distributionManagement>
-		<repository>
-			<id>praqma</id>
-			<name>praqma</name>
-			<url>scpexe://10.10.1.25:/var/www/repo/maven</url>
-		</repository>
-	</distributionManagement>
-
 	<build>
-
 		<plugins>
 			<plugin>
-				<groupId>org.apache.maven.plugins</groupId>
-				<artifactId>maven-compiler-plugin</artifactId>
-				<version>2.3.2</version>
+				<groupId>org.sonatype.plugins</groupId>
+				<artifactId>nexus-staging-maven-plugin</artifactId>
+				<version>1.6.7</version>
+				<extensions>true</extensions>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<serverId>ossrh</serverId>
+					<nexusUrl>https://oss.sonatype.org/</nexusUrl>
+					<autoReleaseAfterClose>true</autoReleaseAfterClose>
 				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-release-plugin</artifactId>
+				<version>2.5.3</version>
+				<configuration>
+					<autoVersionSubmodules>true</autoVersionSubmodules>
+					<useReleaseProfile>false</useReleaseProfile>
+					<releaseProfiles>release</releaseProfiles>
+					<goals>deploy</goals>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-gpg-plugin</artifactId>
+				<version>1.6</version>
+				<executions>
+					<execution>
+						<id>sign-artifacts</id>
+						<phase>verify</phase>
+						<goals>
+							<goal>sign</goal>
+						</goals>
+					</execution>
+				</executions>
+				<configuration>
+					<gpgArguments>
+						<arg>--pinentry-mode</arg>
+						<arg>loopback</arg>
+					</gpgArguments>
+				</configuration>
+			</plugin>
+
+			<plugin>
+				<groupId>org.apache.maven.plugins</groupId>
+				<artifactId>maven-source-plugin</artifactId>
+				<version>2.2.1</version>
+				<executions>
+					<execution>
+						<id>attach-sources</id>
+						<goals>
+							<goal>jar-no-fork</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
 
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.8</version>
-				<configuration>
-					<!-- <show>private</show> -->
-					<nohelp>true</nohelp>
-				</configuration>
+				<version>2.9.1</version>
+				<executions>
+					<execution>
+						<id>attach-javadocs</id>
+						<goals>
+							<goal>jar</goal>
+						</goals>
+					</execution>
+				</executions>
 			</plugin>
-				
 		</plugins>
-		
-        <extensions>
-            <!-- Enabling the use of FTP -->
-            <extension>
-                <groupId>org.apache.maven.wagon</groupId>
-                <artifactId>wagon-ssh-external</artifactId>
-                <version>1.0</version>
-            </extension>
-        </extensions>
-
 	</build>
-	
-	<profiles>
-		<profile>
-			<id>cobertura</id>
-			<activation>
-				<property>
-					<!-- Hudson by default defines a property BUILD_NUMBER which is used 
-						to enable the profile. -->
-					<name>BUILD_NUMBER</name>
-				</property>
-			</activation>
-
-			<build>
-				<plugins>
-					<plugin>
-						<groupId>org.codehaus.mojo</groupId>
-						<artifactId>cobertura-maven-plugin</artifactId>
-						<version>2.4</version>
-						<configuration>
-							<formats>
-								<format>html</format>
-								<format>xml</format>
-							</formats>
-						</configuration>
-						<executions>
-							<execution>
-								<id>do-coverage</id>
-								<phase>package</phase>
-								<goals>
-									<goal>cobertura</goal>
-								</goals>
-								<!-- <inherited>false</inherited> <configuration> </configuration> -->
-							</execution>
-						</executions>
-					</plugin>
-				</plugins>
-			</build>
-		</profile>
-	</profiles>
-
-
-	<reporting>
-		<plugins>
-		</plugins>
-	</reporting>
-	
-    <repositories>
-        <repository>
-            <id>praqma</id>
-            <name>praqma</name>
-            <url>http://code.praqma.net/repo/maven</url>
-        </repository>
-    </repositories>
 
 	<dependencies>
 		<dependency>
 			<groupId>junit</groupId>
 			<artifactId>junit</artifactId>
-			<version>4.8.2</version>
+			<version>4.12</version>
 			<scope>test</scope>
 		</dependency>
-		
 		<dependency>
 			<groupId>net.praqma</groupId>
 			<artifactId>praqmajutils</artifactId>
-			<version>0.1.18</version>
+			<version>1.0.0</version>
 		</dependency>
 	</dependencies>
 
@@ -134,5 +123,17 @@
 		<developerConnection>scm:git:ssh://git@github.com/Praqma/drmemory-api.git</developerConnection>
 		<url>https://github.com/Praqma/drmemory-api.git</url>
 	</scm>
+
+
+	<distributionManagement>
+		<snapshotRepository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/content/repositories/snapshots</url>
+		</snapshotRepository>
+		<repository>
+			<id>ossrh</id>
+			<url>https://oss.sonatype.org/service/local/staging/deploy/maven2/</url>
+		</repository>
+	</distributionManagement>
 
 </project>
